--- a/AIproject/AIproject/AIproject.csproj
+++ b/AIproject/AIproject/AIproject.csproj
@@ -47,6 +47,7 @@
     <Compile Include="AIMain.cs" />
     <Compile Include="CandidateAnswer.cs" />
     <Compile Include="GeneticAlgorithm.cs" />
+    <Compile Include="PriorityQueue.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reader.cs" />
   </ItemGroup>
